--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surat Masa Depan | Future Mail</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <!-- Menggunakan ikon Font Awesome untuk tampilan yang lebih baik -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
     <div id="auth-status" class="status">Menghubungkan ke server...</div>
@@ -89,6 +88,7 @@
         </div>
         <p class="animation-text">Mengunci Surat, Mengirim ke Masa Depan...</p>
     </div>
+    <script src="app.js"></script>
 </body>
-
 </html>
+
